using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ACME.OOP.Procurement.Domain.Model.Aggregates
{
    public class PurchaseOrder
    {
        public PurchaseOrder() { 
        }
    }
}
