
```plantuml
@startuml
skinparam monochrome true

package "ACME.OOP.SCM" {
  class "Supplier" as Supplier {
    +Code: string {readonly}
    +Name: string {readonly}
    +Address: Address {readonly}
  }

  class "SupplierId" as SupplierId {
    +Id: string {readonly}
  }

  Supplier "1" --> "1" SupplierId : relates to
}

package "ACME.OOP.Procurement" {
  class "PurchaseOrder" as PO {
    +OrderNumber: string {readonly}
    +SupplierId: SupplierId {readonly}
    +OrderDate: DateTime {readonly}
    +Currency: string {readonly}
    +AddItem(productId: ProductId, quantity: int, unitPriceAmount: decimal)
    +CalculateTotal(): Money
  }

  class "PurchaseOrderItem" as POItem {
    +ProductId: ProductId {readonly}
    +Quantity: int {readonly}
    +UnitPrice: Money {readonly}
    +CalculateSubtotal(): Money
  }

  class "ProductId" as ProductId {
    +Id: Guid {readonly}
    +New(): ProductId
  }

  PO "1" --> "1" SupplierId
  PO "1" --> "*" POItem
  POItem "1" --> "1" ProductId
}

package "ACME.OOP.Shared" {
  class "Money" as Money {
    +Amount: decimal {readonly}
    +Currency: string {readonly}
    +Add(money: Money): Money
  }

  class "Address" as Address {
    +Street: string {readonly}
    +Number: string {readonly}
    +City: string {readonly}
    +StateOrRegion: string? {readonly}
    +PostalCode: string {readonly}
    +Country: string {readonly}
  }

  POItem "1" --> "1" Money
  Supplier "1" --> "1" Address
}

note right of PO
  Aggregate Root
  Controls creation of PurchaseOrderItem
  Enforces single currency for all item
end note

note right of POItem
  Calculates its own subtotal
end note

note right of ProductId
  Value Object
  Uses Guid for unique product identification
end note

note right of SupplierId
  Value Object
  Identifies Supplier in SCM context
end note

note right of Money
  Value Object
end note

note right of Address
  Value Object
  Supports international addresses
end note

@enduml
```

